Fixed spacing of sidebar image

--- a/public_html/templates/not_to_kids/css/layout.css
+++ b/public_html/templates/not_to_kids/css/layout.css
@@ -80,7 +80,7 @@ body.home #header { background-position: center bottom; }
 
 #social {
 	position: absolute;
-	bottom: 13px;
+	bottom: -13px;
 	right: 0;
 }
 #social_spacer { height: 171px; width: 100%; }
